# spaced

./: .gitignore  .last_build_id  .pre-commit-config.yaml  404.html  AGENT_BACKEND_IMPLEMENTATION_PLAN.md  AI_CONVERSATIONAL_TRANSFORMATION_PLAN.md  CNAME  DEVELOPMENT_PLAN.md  FIREBASE_AUTH_PLAN.md  GOOGLE_OAUTH_SETUP.md  LANDING_PAGE_IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  PHASE1_IMPLEMENTATION_REPORT.md  PHASE4_IMPLEMENTATION_STATUS.md  PHASE4_PRODUCTION_REFINEMENT_PLAN.md  README.md  ROUTING_IMPLEMENTATION_PLAN.md  STAGING_SETUP_PLAN.md  VOICE_CHAT_IMPLEMENTATION_PLAN.md  VOICE_INTEGRATION_PLAN.md  VOICE_OPTIMIZATION_PLAN.md  VOICE_QUICKSTART.md  VOICE_SETUP_GUIDE.md  alt-index.html  authentication_bug_report.txt  bootstrap.sh  chat_flow_implementation_plan.md  debug_test.sh  deploy_github_pages.sh  firebase.json  firestore.rules  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  main.py  manifest.json  pubspec.yaml  question_management_implementation_plan.md  redis_impl.md  (+8 more)
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
backend/: .gitignore  DEPLOYMENT.md  DEV_README.md  DOCKER_README.md  Dockerfile  FSRS_SYSTEM_GUIDE.md  MIGRATION_GUIDE.md  PHASE5_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT.md  SETUP_VERIFICATION.md  deploy.sh  dev.py  docker-compose.redis.yml  docker-compose.yml  env.example  langgraph.json  main.py  pyproject.toml  refined_learning_chatbot_spec.md  render.yaml  requirements-production.txt  requirements.txt  test_api_phase2.py  test_api_phase3.py  test_api_phase4.py  test_api_phase5.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase4_state_management.py  test_phase5.py
backend/api/: health.py  monitoring.py
backend/api/v1/: dependencies.py  router.py
backend/api/v1/endpoints/: chat.py  sessions.py  topics.py
backend/app/: config.py  main.py
backend/core/models/: __init__.py  question.py  session.py  topic.py
backend/core/monitoring/: __init__.py  logger.py  metrics.py  performance.py
backend/core/reliability/: __init__.py  circuit_breaker.py  retry.py  timeouts.py
backend/core/repositories/: __init__.py  question_repository.py  session_repository.py  topic_repository.py
backend/core/services/: __init__.py  conversation_service.py  fsrs_service.py  question_service.py  scoring_service.py  session_service.py  topic_service.py
backend/infrastructure/cache/: __init__.py  topic_cache.py
backend/infrastructure/firebase/: __init__.py  client.py
backend/infrastructure/redis/: __init__.py  client.py  session_manager.py
backend/middleware/: __init__.py  logging.py  performance.py  rate_limiting.py
backend/my_agent/: agent.py
backend/my_agent/utils/: adaptive_intelligence.py  adaptive_state_integration.py  firebase_service.py  nodes.py  question_generator.py  session_state_service.py  state.py  tools.py
backend/my_agent_new/: README.md  langgraph.json  pyproject.toml
backend/my_agent_new/.github/workflows/: integration-tests.yml
backend/my_agent_new/src/agent/: graph.py  nodes.py  state.py  state_defaults.json  tools.py
backend/my_agent_new/src/agent/utils/: __init__.py  adaptive_intelligence.py  adaptive_state_integration.py  firebase_service.py
backend/scripts/: migrate_firestore_structure.py  test_fsrs_system.py  test_new_structure.py
flutter_app/: .firebaserc  Dockerfile.build  Dockerfile.dev  README.md  example_markdown_usage.md  firebase.json  firestore.rules  pubspec.yaml
ios/: .gitignore  Gemfile
lib/: main.dart
macos/: Podfile
src/: pyproject.toml
src/backend/: .gitignore  env.example  main_transcribe.py  pyproject.toml  requirements_transcribe.txt  setup_env.py  start_transcribe_service.sh  start_voice_services.sh  test_livekit_env.py  voice_agent_worker.py
src/backend/api/: monitoring.py
src/backend/api/v1/: dependencies.py  router.py
src/backend/api/v1/endpoints/: chat.py  questions.py  sessions.py  topics.py  voice.py
src/backend/app/: cli.py  config.py  main.py
src/backend/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/backend/core/models/: __init__.py  context.py  conversation.py  llm_outputs.py  message.py  question.py  session.py  topic.py
src/backend/core/monitoring/: __init__.py  logger.py  metrics.py  performance.py
src/backend/core/reliability/: __init__.py  circuit_breaker.py  retry.py  timeouts.py
src/backend/core/repositories/: __init__.py  context_repository.py  question_repository.py  session_repository.py  topic_repository.py
src/backend/core/services/: __init__.py  clarification_service.py  context_service.py  conversation_service.py  evaluation_service.py  feedback_service.py  fsrs_service.py  question_service.py  routing_service.py  scoring_service.py  session_service.py  topic_service.py
src/backend/infrastructure/cache/: topic_cache.py
src/backend/infrastructure/firebase/: __init__.py  client.py
src/backend/infrastructure/redis/: __init__.py  session_manager.py
src/backend/middleware/: __init__.py  logging.py  performance.py  rate_limiting.py
test/: schedule_manager_test.dart  widget_test.dart
web/: CNAME  index.html  manifest.json  (+1 more)
(+134 files in other folders)
