[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "firebase-admin",
    "redis",
    "openai",
    "tenacity",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double" 