[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "firebase-admin",
    "redis",
    "openai",
    "tenacity",
    "ruff",
    "pre-commit",
    "psutil",
]

[project.scripts]
start-backend = "app.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "app*", "core*", "infrastructure*", "middleware*"]
