[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "firebase-admin",
    "redis",
    "openai>=1.0.0,<2.0.0",
    "tenacity",
    "ruff",
    "pre-commit",
    "psutil",
    "python-multipart",
    "soundfile",
    "numpy",
]

[project.scripts]
start-backend = "app.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "app*", "core*", "infrastructure*", "middleware*"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
google-cloud-firestore = "^2.16.0"
google-auth = "^2.29.0"
firebase-admin = "^6.5.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
openai = "^0.28.1"
python-dotenv = "^1.0.1"
redis = "^5.0.4"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
